--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
     "@mui/styled-engine-sc": "^6.4.3",
+    "@react-three/drei": "^10.0.1",
+    "@react-three/fiber": "^9.0.4",
+    "@types/three": "^0.173.0",
     "axios": "^1.7.9",
+    "framer-motion": "^12.4.7",
     "moment": "^2.30.1",
+    "motion": "^12.4.7",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "styled-components": "^6.1.15"
+    "styled-components": "^6.1.15",
+    "three": "^0.173.0"
   },
   "devDependencies": {
     "@types/node": "^20",
