--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_PASSWORD }}
           script: |
-            cd /home/root/frontend
+            cd /root/cicd/newmachine-fn
             git pull origin main
             cd /home/root
             docker-compose build frontend
