--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,4 +24,4 @@ jobs:
             git pull origin main
             cd /root/cicd
             docker compose build
-            docker compose up -d
+            docker compose up
