--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,27 +1,12 @@
-name: Deploy Frontend to DigitalOcean
+- name: Install sshpass
+  run: sudo apt-get update && sudo apt-get install -y sshpass
 
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: SSH & Deploy Frontend
-        uses: appleboy/ssh-action@v0.1.10
-        with:
-          host: ${{ secrets.SERVER_IP }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            cd /root/cicd/newmachine-fn
-            git pull origin main
-            cd /root/cicd
-            docker compose build
-            docker compose up
+- name: SSH & Deploy with Password
+  run: |
+    sshpass -p "${{ secrets.SERVER_PASSWORD }}" ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << EOF
+      cd /root/cicd/newmachine-fn
+      git pull origin main
+      cd /root/cicd
+      docker compose build
+      docker compose up -d
+    EOF
